--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id = "gradient">
-	<h1>Background Generator change 69</h1>
+	<h1>Background Generator change 69 again</h1>
 	<input oninput="setGradient()" class = "color1" type="color" name="color1" value="#00ff00">
 	<input oninput="setGradient()" class = "color2" type="color" name="color2" value="#ff0000">
 	<h2>this is the background</h2>	
